<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activities.Login"
        tools:ignore="ExtraText">


        <View
            android:id="@+id/view"
            android:layout_width="360dp"
            android:layout_height="620dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/view_tela_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            tools:ignore="MissingConstraints" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:foregroundGravity="center"
            android:src="@drawable/aset_logo"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_user"
            style="@style/btn_tela_login"
            android:layout_marginTop="26dp"
            android:drawableRight="@drawable/ic_key2"
            android:hint="@string/key"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/btn_tela_login"
            android:drawableRight="@drawable/ic_eye"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:longClickable="false"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/edit_user" />

        <CheckBox
            android:id="@+id/check_connected"
            style="@style/Check_Connected"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/keep_loggedin"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

        <TextView
            android:id="@+id/esta_com_problemas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Está com problemas?"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/check_connected"
            app:layout_constraintEnd_toEndOf="@id/check_connected"
            app:layout_constraintTop_toBottomOf="@id/check_connected"
            android:layout_marginTop="20dp"

            />

        <TextView
            android:id="@+id/entre_em_contato_conosco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entre em contato conosco "
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/esta_com_problemas"
            app:layout_constraintEnd_toStartOf="@id/esqueceu_senha"
            app:layout_constraintTop_toBottomOf="@id/esta_com_problemas"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="15dp"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/esqueceu_senha"
            style="@style/Forgot_Password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/texto_tela_escolha"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/entre_em_contato_conosco"
            app:layout_constraintTop_toBottomOf="@id/esta_com_problemas"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/esta_com_problemas"
            android:layout_marginTop="7dp"
             />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/button_login"

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_entrar"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_24"
            android:gravity="center"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/esqueceu_senha" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="65dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/bemVindo"
            android:textColor="@color/black"
            android:textSize="45dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ppja"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintBottom_toBottomOf="@id/view"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>